2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_memset.c,
	  device/lib/z180/memcpy.s,
	  device/lib/z180/memmove.s,
	  device/lib/z80/memcpy.s,
	  device/lib/z80/memmove.s,
	  device/lib/z80n/memcpy.s,
	  device/lib/z80n/memmove.s,
	  device/lib/r3ka/memcpy.s,
	  device/lib/r3ka/memmove.s,
	  device/lib/r3ka/strcpy.s:
	  Fix library functions for new calling convention.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not use some aspects of new calling convention for banked functions.

2021-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c,
	  support/valdiag/valdiag.py:
	  Fix diagnostics for __raisonance calling convention.

2021-08-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (valCastLiteral): possibly fix bug #3273

2021-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c:
	  Diagnostics for conflicting calling conventions.

2021-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix buffer overflow reported in patch #397 by Arnout Engelen.

2021-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  doc/sdccman.lyx:
	  .version:
	  Enable new calling convention for gbz80.

2021-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx:
	  Macro for calling convention ABI version.

2021-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/stm8/main.c,
	  src/z80/gen.c,
	  src/z80/main.c:
	  --sdcccall option to set default version of calling convention ABI.

2021-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pdk/main.c,
	  src/pic14/main.c,